--- a/src/componentes/header.scss
+++ b/src/componentes/header.scss
@@ -1,8 +1,10 @@
 .header {
   width: 100%;
   height: 100px;
+  position: absolute;
   // background-color: rgba(92, 105, 224, 0.315);
   display: flex;
+  border-bottom: 2px solid #B41C8B;
   &__logo {
     width: 80px;
     height: 80px;
@@ -46,16 +48,24 @@
       }
       &__botton{
         display: flex;
-        justify-content: space-evenly;
+        justify-content: space-between;
+        margin-right: 15px;
         // background-color: chartreuse;
         &__delivery {
-          height: 25px;
+          height: 30px;
           // background-color: crimson;
           img{
-            height: 10px;
+            height: 15px;
+            margin: 0;
           }
           h6 {
-            margin: 0;
+            margin: 3px 0 0 0;
+            font-family: Quicksand;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 10px;
+            line-height: 5px;
+            color: #818181;
           }
         }
         &__entrega {
@@ -63,7 +73,13 @@
           // background-color: darkgoldenrod;
           h6 {
             height: 10px;
-            margin: 0;
+            margin: 3px 0 0 0;
+            font-family: Quicksand;
+            font-style: normal;
+            font-weight: 500;
+            font-size: 10px;
+            line-height: 5px;
+            color: #818181;
           }
         }
       }
