--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,9 +1,11 @@
 .header {
   width: 100%;
   height: 100px;
-  position: absolute;
+  position: fixed;
+  top: 0;
   // background-color: rgba(92, 105, 224, 0.315);
   display: flex;
+  background: #FFFFFF;
   border-bottom: 2px solid #B41C8B;
   &__logo {
     width: 80px;
