--- a/src/components/card/card.scss
+++ b/src/components/card/card.scss
@@ -9,6 +9,7 @@
   &__product-image {
     width: 200px;
     height: 200px;
+    border: 1px solid #EDEDED;
     box-sizing: border-box;
   }
   &__name {
