Made resnsive CSS of cart component

--- a/src/components/CardContainer/cardContainer.scss
+++ b/src/components/CardContainer/cardContainer.scss
@@ -1,3 +1,7 @@
-// .card_container {
-//   margin-top: 180px;
-// }
+.card_container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 250px);
+  justify-content: center;
+  gap: 10px;
+  width: 80%;
+}
