--- a/src/components/searchBar/searchbar.scss
+++ b/src/components/searchBar/searchbar.scss
@@ -1,8 +1,13 @@
+$breakpoint-tablet: 768px;
+
 .searchbar {
   width: 100%;
   margin-top: 120px;
   display: flex;
   justify-content: center;
+  @media (min-width: $breakpoint-tablet) {
+    margin-top: 20px;
+  }
   &__input{
     width: 80%;
     height: 25px;
