--- a/src/pages/main.scss
+++ b/src/pages/main.scss
@@ -3,5 +3,8 @@
   width: 100%;
   min-width: 360px;
   min-height: 100vh;
-  margin-top: 150px;
+  margin-top: 30px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
