--- a/src/components/modal/modal.scss
+++ b/src/components/modal/modal.scss
@@ -1,3 +1,5 @@
+$breakpoint-tablet: 768px;
+
 .modal{
   background-color: rgb(255, 255, 255);
   display: block;
@@ -7,6 +9,33 @@
   width: 100%;
   min-height: 100vh;
   // color: black;
+  @media (min-width: $breakpoint-tablet) {
+    &__container {
+      display: flex;
+    }
+  }
+  @media (min-width: $breakpoint-tablet) {
+    width: 500px;
+    height: 350px;
+    min-height: unset;
+    top: 20%;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+  &__background {
+    display: block;
+    @media (min-width: $breakpoint-tablet) {
+      position: fixed;
+      // box-sizing: unset;
+      top: -50%;
+      left:-50%;
+      display: block;
+      width: 200%;
+      min-height: 200vh;
+      // z-index: -100;
+      background-color: rgba(0, 0, 0, 0.24);
+    }
+  }
   &__header{
     width: 100%;
     height: 50px;
